syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "BusinessSharkService";

package sawmill;

service SawmillService {
  rpc LoadList(SawmillListRequest) returns (SawmillListResponse);
  rpc LoadDetail(SawmillRequest) returns (SawmillResponse);
}

// LoadList 
message SawmillListRequest {
  int32 CompanyId = 1;
}

message SawmillListGrpc {
  int32 DivisionId = 1;
  string CountryCode = 2; 
  string City = 3;
  string Name = 4;
  int32 ProductDefinitionId = 5;
  int32 VolumeCapacity = 6;
}

message SawmillListResponse {
	repeated SawmillListGrpc Sawmills = 1;
}

// Load
message SawmillRequest {
  int32 DivisionId = 1;
}

message SawmillResponse {
  int32 DivisionId = 1;
  string CountryCode = 2; 
  string City = 3;
  string Name = 4;
  string Description = 5;
  int32 ProductDefinitionId = 6;
  int32 VolumeCapacity = 7;

  double ResourceDepositQuality = 8;
  double RawMaterialReserves = 9;
  double TechLevel = 10;
  double PlantingCosts = 11;
  double RentalCost = 12;
  SawmillWarhouseGrpc OutputWarehouse = 13;
  SawmillToolsGrpc Tools = 14;
  SawmillEmployeesGrpc Employees = 15;
  repeated SawmillTrnasactionsGrpc DivisionTransactions = 16;
}

message SawmillWarhouseGrpc {
	int32 WarehouseId = 1;
	int32 VolumeCapacity = 2;
	repeated SawmillWarehouseProductsGrpc Products = 3;
}

message SawmillWarehouseProductsGrpc {
	int32 WarehouseProductId = 1;
	int32 Quantity = 2;
	double Quality = 3;
	double UnitPrice = 4;
	int32 ProductDefinitionId = 5;
}

message SawmillToolsGrpc {
	int32 ToolsId = 1;
	int32 TotalQuantity = 2;
	double TechLevel = 3;
	double Deprecation = 4;
	double MaintenanceCostsAmount = 5;
}

message SawmillEmployeesGrpc {
	int32 EmployeesId = 1;
	int32 TotalQuantity = 2;
	double SkillLevel = 3;
	double SalaryPerEmployee = 4;
}

message SawmillTrnasactionsGrpc {
	int32 DivisionTransactionsId = 1;
	google.protobuf.Timestamp TransactionDate = 2;
	double SalesProductsAmount = 3;
	
	double PurchasedProductsAmount = 4;
	double TransportCostsAmount = 5;
	double EmployeeSalariesAmount = 6; 
	double MaintenanceCostsAmount = 7;
	double IncomeTaxAmount = 8;
	double RentalCostsAmount = 9;
	double EmployeeTrainingAmount = 10; 
	double CustomAmount = 11;
	double AdvertisingCostsAmount = 12;
	
	double ReplenishmentAmount = 13;
}